Clear transient blur threshold when clicking the VK settings link

The settings menu has an auto-focused search field. Because the
keyboard has a direct settings link button, clicking the link will
activate the settings menu which will clear the keyboard. Then when the
HTML loads, the keyboard comes back due to the transient blur
heurisitc.

Solution is to dismiss the keyboard, which will set the transient blur
timeout value, and then manually clear it. Then when the settings page
appears, it will not open the keyboard.

Only clearing the timeout from the API is not sufficient, since it is
the invocation of the settings menu that dismisses the keyboard and
will reset the timeout.

Bug: 839691
Change-Id: Ic54a7590f905a00c43bd13cb152354e7100fe0b1
Reviewed-on: https://chromium-review.googlesource.com/1049409
Commit-Queue: Blake O'Hare <blakeo@chromium.org>
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563940}
Former-commit-id: 2c5f676c9642f538e49453a8445a9b8c6a97b22b